[package]
name = "xdp-broker-ebpf"
version = "0.1.0"
edition.workspace = true

[dependencies]
ebpf-test-common = { path = "../xdp-broker-common" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "xdp-broker"
path = "src/main.rs"
